Commit before deploy
