# src/controllers/userController.ts
@@ -3,6 +3,7 @@ import jwt from "jsonwebtoken"
 import { getAllUsers, createUser, getUserByUsername } from "../models/user";
 import { validatingUser } from "../utils/userValidationResponse";
 import bcrypt from "bcrypt"
+import { secretKey } from "../middleware/jwtAuth";
 
 export async function getUsersController(req:Request, res : Response) {
     try {
@@ -16,6 +17,13 @@ export async function getUsersController(req:Request, res : Response) {
 export async function createUserController(req:Request, res : Response, next: NextFunction) {
     try {
         const {username, password, role} = req.body
+
+        if (!username || username.trim() === "") {
+            return res.status(400).json({
+                error: 'Invalid Username',
+                message: 'Username cannot be empty or contain only whitespace.'
+            });
+        }
 
         const checkUsername = await getUserByUsername(username);
         if (checkUsername != null) {
@@ -47,18 +55,17 @@ export async function createUserController(req:Request, res : Response, next: Ne
 export async function loginUser(req: Request, res: Response) {
     try {
         const { username, password} = req.body;
-        const secretKey = "test token secret"
         const user = await getUserByUsername(username);
         if (!user) {
-            return res.json("user can't be found")
+            return res.status(404).json({message: "user can't be found"})
     }
 
         const passwordIsMatched = await bcrypt.compare(password, user.password)
         if (!passwordIsMatched) {
-            return res. json("Wrong password")
+            return res.status(401).json({message: "Incorrect password"})
         }
         const userToken = jwt.sign(user, secretKey)
-        res.json({
+        res.status(200).json({
             message: "User succesfully logged in",
             token: userToken
         })
